src/index.css
:root {
  --m-white: #e6e6e7;
  --m-blue: #33a0d1;
  --m-purple: #373485;
  --m-red: #c52b30;

  --background-color: var(--m-white);
  --background-color-dark: #161618;
  --text-color: #161618;
  --text-color-dark: var(--m-white);
  --link-color: var(--m-purple);
  --link-color-light: #514e9a;
  --link-color-lighter: #7a77b7;
  --link-color-dark: #23206d;
  --link-color-darker: #0f0c50;
  --code-color: #666;
  --code-color-dark: #999;
  --blockquote-color: #666;
}

body {
  font-size: 12pt;
  font-family: "Helvetica", "Arial", "黑體-繁", "Noto Sans TC", "Noto Sans SC", "微軟正黑體", sans-serif;
  background-color: var(--background-color);
  color: var(--text-color);
}

hr {
  border-top: .15em solid transparent;
  border-image: 100% 0 0 linear-gradient(90deg, currentColor 2em, transparent 0);
}

a {
  color: var(--link-color);
}

a:hover {
  color: var(--link-color-light);
}

a:visited {
  color: var(--link-color-lighter);
}

a:active {
  color: var(--link-color-lighter);
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: var(--background-color-dark);
    color: var(--text-color-dark);
  }

  a {
    color: var(--link-color-lighter);
  }

  a:hover {
    color: var(--link-color-light);
  }

  a:visited {
    color: var(--link-color);
  }

  a:active {
    color: var(--link-color);
  }
}

